# secret-fmt

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: lib.rs
